<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/food_list"
            android:icon="@drawable/ic_food_list"
            android:title="@string/food_list"
            android:checked="true"/>

        <item
            android:id="@+id/menu_list"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu_list"/>

    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/edit_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/edit_profile"/>

            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_arrow"
                android:title="@string/about_us"/>

        </menu>

    </item>

</menu>